--- a/contact_ui_deployment.yml
+++ b/contact_ui_deployment.yml
@@ -16,7 +16,7 @@ spec:
   spec:
     containers:
     - name: contactuicontainer
-      image: ashokit/contact_ui_app
+      image: afaridarko/contact_ui_app
       ports:
       - containerPort: 80
 ---
@@ -25,10 +25,11 @@ kind: Service
 metadata:
  name: contactuisvc
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
    app: contactui
   ports:
    - port: 80
      targetPort: 80
+     nodePort: 30300
 ...
