--- a/angular.json
+++ b/angular.json
@@ -11,7 +11,7 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular",
+          "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/contact-ui",
             "index": "src/index.html",
